--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -12,8 +12,9 @@
         android:id="@+id/fondo"
         android:layout_width="431dp"
         android:layout_height="297dp"
+        android:layout_alignParentTop="true"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="112dp"
+        android:layout_marginTop="65dp"
         android:layout_marginEnd="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.478"
@@ -23,11 +24,17 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="192dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_below="@+id/fondo"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="109dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="110dp"
         android:text="Bienvenido!"
         android:textSize="34sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -37,12 +44,20 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="379dp"
-        android:layout_height="139dp"
-        android:text="A tu Gestor de Tickets  hacia el area de TI de la Direccion Regional de Agricultura de Cajamarca."
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginEnd="6dp"
+        android:fontFamily="sans-serif-condensed"
+        android:justificationMode="inter_word"
+        android:text="A tu Gestor de Tickets hacia el departamento de Tecnología de la Información de la Dirección Regional de Agricultura de Cajamarca."
         android:textAlignment="center"
         android:textColor="@color/material_dynamic_neutral_variant50"
-        android:textSize="24sp"
+        android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,34 +65,30 @@
         app:layout_constraintVertical_bias="0.181" />
 
     <Button
-        android:id="@+id/iniciar_sesion"
-        android:layout_width="383dp"
+        android:id="@+id/inicio_registro"
+        android:layout_width="wrap_content"
         android:layout_height="64dp"
-        android:layout_marginBottom="88dp"
-        android:backgroundTint="#068f41"
-        android:padding="16dp"
-        android:text="INICIAR SESIÓN"
-        android:textAlignment="center"
-        android:textColor="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fondo"
-        app:layout_constraintVertical_bias="0.788" />
+        android:layout_below="@+id/iniciar_sesion"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="50dp"
+        android:backgroundTint="#032100"
+        android:text="SOLICITUD DE REGISTRO" />
 
     <Button
-        android:id="@+id/inicio_registro"
-        android:layout_width="389dp"
-        android:layout_height="60dp"
-        android:backgroundTint="#032100"
-        android:padding="16dp"
-        android:text="SOLICITUD DE REGISTRO"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fondo"
-        app:layout_constraintVertical_bias="0.824" />
+        android:id="@+id/iniciar_sesion"
+        android:layout_width="267dp"
+        android:layout_height="63dp"
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="17dp"
+        android:layout_marginEnd="50dp"
+        android:backgroundTint="#068f41"
+        android:text="INICIAR SESIÓN" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</RelativeLayout>
