--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="status_in_progress">#1976D2</color><!-- Azul -->
     <color name="status_completed">#43A047</color>  <!-- Verde -->
     <color name="status_cancelled">#D32F2F</color>
+    <color name="modo_noche">#539670</color>
 </resources>
